# nowen-video

./: .gitignore  Dockerfile  Makefile
.github/workflows/: release-desktop.yml
android/app/: build.gradle.kts
android/app/src/main/java/com/nowen/video/data/model/: Models.kt
cmd/server/: main.go
config/: ai.yaml
desktop/scripts/: build-sidecar.ps1  build-sidecar.sh  dev.ps1  dev.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
internal/config/: ai_presets.go  config.go
internal/crypto/: secret.go
internal/handler/: admin.go  admin_metadata.go  admin_system.go  ai.go  auth.go  handler.go  preprocess.go  scan_postprocess.go  smart_rename.go
internal/model/: ai_usage.go  model.go  scan_classification.go  smart_rename.go
internal/repository/: repo_admin.go  repo_ai_usage.go  repo_media.go  repo_preprocess.go  repo_scan_classification.go  repo_smart_rename.go  repo_stats.go  repository.go
internal/service/: ai.go  ai_router.go  file_manager.go  filename_parser.go  filename_parser_test.go  metadata.go  preprocess.go  scan_postprocess.go  service.go  smart_rename.go  smart_rename_executor.go  smart_rename_platform_unix.go  smart_rename_platform_windows.go  transcode.go
internal/version/: version.go
scripts/: release.sh  run-dev.bat  run-server.bat  run-web.bat  run.bat  sync-version.ps1
web/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  vite-env.d.ts
web/src/api/: admin.ts  ai.ts  preprocess.ts  scanClassify.ts  smart_rename.ts
web/src/components/: Layout.tsx  LazyIngestModal.tsx  LibraryManager.tsx  MediaCard.tsx  Sidebar.tsx  SmartRenameDrawer.tsx  SmartRenamePanel.tsx
web/src/components/admin/: AIDispatcherPanel.tsx  AITab.tsx  ClassificationTab.tsx  DashboardTab.tsx
web/src/components/file-manager/: FileStatsBar.tsx
web/src/components/media/: HeroSection.tsx  MediaTechSpecs.tsx
web/src/components/preprocess/: TranscodeJobsPanel.tsx
web/src/i18n/locales/: en-US.ts  ja-JP.ts  zh-CN.ts
web/src/lib/: motion.ts
web/src/pages/: AdminPage.tsx  LibraryPage.tsx  MediaDetailPage.tsx  PreprocessLayout.tsx  PreprocessPage.tsx  SeriesDetailPage.tsx  SmartRenamePage.tsx
web/src/types/: index.ts
web/src/utils/: invalidateMediaCaches.ts  parseDirectMatchId.ts
(+6 files in other folders)
